commit code: update excelHelper, TeacherService, StudentService